--- a/plugins/overlander/general/controllers/brands/_brand.htm
+++ b/plugins/overlander/general/controllers/brands/_brand.htm
@@ -1,3 +1,3 @@
 <?php if ($value): ?>
-   <img src="/storage/app/media/<?php echo $value; ?>" height=50 />
+  <img src="/storage/app/media/<?php echo $value; ?>" height=100>
 <?php endif ?>
