--- a/plugins/overlander/users/models/users/_existmember.htm
+++ b/plugins/overlander/users/models/users/_existmember.htm
@@ -1,4 +1,4 @@
 <?php
 $existmember = (new Overlander\Users\Models\Users()) ->
-getExistMemberOptions(); $class = [ 1 => 'text-body', 0 => 'text-body', ]; echo
+getIsExistingMemberOptions(); $class = [ 1 => 'text-body', 0 => 'text-body', ]; echo
 '<span class="'.$class[$value].'">'.$existmember[$value].'</span>';
