fix: rewrite general api

--- a/plugins/overlander/general/models/brands/_image.htm
+++ b/plugins/overlander/general/models/brands/_image.htm
@@ -1,2 +1,2 @@
 <?php
-echo '<img src="'.url(config('system.storage.media.path')) . $value.'"/>';
+echo '<img src="'.url(config('system.storage.media.path')) . $value.'" width="125"/>';
