--- a/plugins/overlander/users/models/users/_status.htm
+++ b/plugins/overlander/users/models/users/_status.htm
@@ -1,4 +1,4 @@
 <?php
 $status = (new Overlander\Users\Models\Users()) ->
-getIsActivatedOptions(); $class = [ 1 => 'text-success', 0 => 'text-danger', ]; echo
+getStatusOptions(); $class = [ 1 => 'text-success', 0 => 'text-danger', ]; echo
 '<span class="oc-icon-circle '.$class[$value].'">'.$status[$value].'</span>';
