--- a/plugins/overlander/transaction/models/pointhistory/_type.htm
+++ b/plugins/overlander/transaction/models/pointhistory/_type.htm
@@ -1,4 +1,4 @@
 <?php
 $type = (new Overlander\Transaction\Models\PointHistory()) ->
-getTypeOptions(); $class = [ 1 => 'text-body', 0 => 'text-body']; echo
+getTypeOptions(); $class = [ 1 => 'text-danger', 0 => 'text-success']; echo
 '<span class="'.$class[$value].'">'.$type[$value].'</span>';
