--- a/plugins/overlander/transaction/models/transaction/_button.htm
+++ b/plugins/overlander/transaction/models/transaction/_button.htm
@@ -1,4 +1,6 @@
 <?php
 $id = (new Overlander\Transaction\Models\Transaction()) ->
 getPointHistoryPreview($record->id);
-echo '<a class="btn btn-info" href="' . Backend::url("overlander/transaction/pointhistory/preview/$id") . '">' . e(trans('overlander.transaction::lang.list.btn_goto')) . '</a>';
+$class = $id === null ? 'disabled' : 'active';
+echo '<a
+    class="btn btn-info ' . $class . '"' .'href="' . Backend::url("overlander/transaction/pointhistory/preview/$id") . '">' . e(trans('overlander.transaction::lang.list.btn_goto')) . '</a>';
